--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
       <!-- Редактирование профиля -->
       <section class="popup popup_type_edit">
         <div class="popup__container">
-          <button class="popup__close-btn" type="button"></button>
+          <button class="popup__close-btn popup__save-btn_submit" type="button"></button>
           <form
             action="form"
             class="popup__form"
             method="post"
             name="popupEditForm"
+            novalidate
           >
             <h3 class="popup__title">Редактировать профиль</h3>
             <input
@@ -45,15 +46,23 @@
               id="user-name"
               name="userName"
               placeholder="Имя"
+              required
+              minlength="2"
+              maxlength="40"
             />
+            <span class="popup__input-error popup__input-error_type_user-name"></span>
             <input
               type="text"
               class="popup__input popup__input_type_user-about"
               id="user-about"
               name="userAbout"
               placeholder="О себе"
+              required
+              minlength="2"
+              maxlength="200"
             />
-            <button class="popup__save-btn" type="submit">Сохранить</button>
+            <span class="popup__input-error popup__input-error_type_user-about"></span>
+            <button class="popup__save-btn popup__save-btn_submit" type="submit">Сохранить</button>
           </form>
         </div>
       </section>
@@ -67,6 +76,7 @@
             class="popup__form"
             method="post"
             name="popupAddPlaceForm"
+            novalidate
           >
             <h3 class="popup__title">Новое место</h3>
             <input
@@ -75,15 +85,21 @@
               id="place-name"
               name="placeName"
               placeholder="Название"
+              required
+              minlength="2"
+              maxlength="30"
             />
+            <span class="popup__input-error popup__input-error_type_place-name"></span>
             <input
-              type="text"
+              type="url"
               class="popup__input popup__input_type_link-img"
               id="link-img"
               name="linkImg"
               placeholder="Ссылка на картинку"
+              required
             />
-            <button class="popup__save-btn" type="submit">Создать</button>
+            <span class="popup__input-error popup__input-error_type_link-img"></span>
+            <button class="popup__save-btn popup__save-btn_submit" type="submit">Создать</button>
           </form>
         </div>
       </section>
@@ -115,5 +131,6 @@
     </template>
 
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validate.js"></script>
   </body>
 </html>
