--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
       <!-- Редактирование профиля -->
       <section class="popup popup_type_edit">
         <div class="popup__container">
-          <button class="popup__close-btn popup__save-btn_submit" type="button"></button>
+          <button
+            class="popup__close-btn popup__save-btn_submit"
+            type="button"
+          ></button>
           <form
             action="form"
             class="popup__form"
@@ -50,7 +53,9 @@
               minlength="2"
               maxlength="40"
             />
-            <span class="popup__input-error popup__input-error_type_user-name"></span>
+            <span
+              class="popup__input-error popup__input-error_type_user-name"
+            ></span>
             <input
               type="text"
               class="popup__input popup__input_type_user-about"
@@ -61,8 +66,15 @@
               minlength="2"
               maxlength="200"
             />
-            <span class="popup__input-error popup__input-error_type_user-about"></span>
-            <button class="popup__save-btn popup__save-btn_submit" type="submit">Сохранить</button>
+            <span
+              class="popup__input-error popup__input-error_type_user-about"
+            ></span>
+            <button
+              class="popup__save-btn popup__save-btn_type_submit"
+              type="submit"
+            >
+              Сохранить
+            </button>
           </form>
         </div>
       </section>
@@ -89,7 +101,9 @@
               minlength="2"
               maxlength="30"
             />
-            <span class="popup__input-error popup__input-error_type_place-name"></span>
+            <span
+              class="popup__input-error popup__input-error_type_place-name"
+            ></span>
             <input
               type="url"
               class="popup__input popup__input_type_link-img"
@@ -98,8 +112,15 @@
               placeholder="Ссылка на картинку"
               required
             />
-            <span class="popup__input-error popup__input-error_type_link-img"></span>
-            <button class="popup__save-btn popup__save-btn_submit" type="submit">Создать</button>
+            <span
+              class="popup__input-error popup__input-error_type_link-img"
+            ></span>
+            <button
+              class="popup__save-btn popup__save-btn_type_submit"
+              type="submit"
+            >
+              Создать
+            </button>
           </form>
         </div>
       </section>
