--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
       <!-- Редактирование профиля -->
       <section class="popup popup_type_edit">
         <div class="popup__container">
-          <button
-            class="popup__close-btn popup__save-btn_submit"
-            type="button"
-          ></button>
+          <button class="popup__close-btn" type="button"></button>
           <form
             action="form"
             class="popup__form"
@@ -70,7 +67,7 @@
               class="popup__input-error popup__input-error_type_user-about"
             ></span>
             <button
-              class="popup__save-btn popup__save-btn_type_submit"
+              class="popup__save-btn popup__save-btn_submit"
               type="submit"
             >
               Сохранить
@@ -116,7 +113,7 @@
               class="popup__input-error popup__input-error_type_link-img"
             ></span>
             <button
-              class="popup__save-btn popup__save-btn_type_submit"
+              class="popup__save-btn popup__save-btn_submit"
               type="submit"
             >
               Создать
