--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./pages/index.css" />
     <title>Место</title>
   </head>
 
@@ -44,7 +43,7 @@
               type="text"
               class="popup__input popup__input_type_user-name"
               id="user-name"
-              name="userName"
+              name="name"
               placeholder="Имя"
               required
               minlength="2"
@@ -57,7 +56,7 @@
               type="text"
               class="popup__input popup__input_type_user-about"
               id="user-about"
-              name="userAbout"
+              name="about"
               placeholder="О себе"
               required
               minlength="2"
@@ -147,7 +146,5 @@
         </div>
       </article>
     </template>
-    <script src="./scripts/initial-cards.js"></script>
-    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
